# Shielding_Simulation

./: README.md
simulation_shielding_height - upload/: CMakeLists.txt  DBDecay.cc  DBDecay.in  GNUmakefile  readme.md
simulation_shielding_height - upload/include/: DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  FridgeConstruction.hh  HistoManager.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  SteppingAction.hh  SteppingVerbose.hh  TrackingAction.hh  TrackingMessenger.hh  VoltageFieldData.hh
simulation_shielding_height - upload/macFiles/: gammaBkg.mac  init_vis.mac  job.cmd  mergeResults.cc  na22.mac  readResults.cc  shielding0.mac  shielding100.mac  shielding120.mac  shielding140.mac  shielding50.mac
simulation_shielding_height - upload/src/: DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  FridgeConstruction.cc  HistoManager.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  SteppingAction.cc  SteppingVerbose.cc  TrackingAction.cc  TrackingMessenger.cc
simulation_shielding_height - upload/userData/: unfoldedSpectra_centerValue.txt
